dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__writer__tests__drop_open_writer_sends_fin_packet.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG Writer dropping stream_id=42 status=Open next_offset=0 inflight_bytes=0 remote_max_data=14720
0:00:00.000000000 DEBUG Sent FIN stream_id=42
0:00:00.000000000 DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:596:25
0:00:00.000000000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:519:21
