dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__writer__tests__server_unknown_path_secret_completion_surfaces_connection_refused.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.000000000 DEBUG Transmission failed stream_id=42 reason=UnknownPathSecret
0:00:00.000000000 DEBUG event=on_shutdown prev=Open next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:644:41
0:00:00.000000000 DEBUG Writer dropping stream_id=42 status=Shutdown next_offset=5 inflight_bytes=0 remote_max_data=14720
