dc/s2n-quic-dc/src/snapshots/s2n_quic_dc__testing__run_sim_with_snapshot@stream__writer__tests__server_write_from_fin_blocks_while_budget_exhausted_then_sends_single_fin_frame.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 DEBUG grow epoch=8
0:00:00.100000000 DEBUG poll_remote_budget received messages stream_id=42 status=Open msg_count=1
0:00:00.100000000 DEBUG event=on_send_fin prev=Open next=FinSent location=dc/s2n-quic-dc/src/stream/writer.rs:956:29
0:00:00.100000000 DEBUG Writer dropping stream_id=42 status=FinSent next_offset=2 inflight_bytes=2 remote_max_data=2
0:00:00.100000000 DEBUG event=on_shutdown prev=FinSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:514:25
